--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mysten/sui": "^1.30.1",
+    "@mysten/dapp-kit": "^0.16.9",
+    "@mysten/sui": "^1.30.4",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@tanstack/react-query": "^5.80.6",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
